--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<hr>
+<img src = "img/Рисунок1.png" width = "200" height = "200" alt="Тут пишеться текст">
+<u>HTML</u> - це мова розмітки гіпертексту
+<font color ="red" size ="5"> Українські традиції </font>
 <h1>Hello World</h1>
+<h4>Hello World</h4>
+<h6>Hello World</h6>
+<a href="https://www.google.com/">Посилання</a>
