--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <hr>
-<img src = "img/Рисунок1.png" width = "200" height = "200" alt="Тут пишеться текст">
+<img src = "Рисунок1.png" width = "200" height = "200" alt="Тут пишеться текст">
 <u>HTML</u> - це мова розмітки гіпертексту
 <font color ="red" size ="5"> Українські традиції </font>
 <h1>Hello World</h1>
